pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: short-app
  labels:
    app.kubernetes.io/name: short-app
    components: frontend
spec:
  containers:
  - name: short-app
    image: antonlarichev/short-app
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
      requests:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
