postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:16
        resources:
          limits:
            memory: "1024Mi"
            cpu: "500m"
          requests:
            memory: "1024Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432
        volumeMounts:
          #name volumeMounts = name volume
        - name: postgres-data
          # Путь в контейнере, где будут лежать данные
          mountPath: /var/lib/postgresql/data
          # Каталог/файл, который будет в volume создан для хранения данных
          subPath: postgres
      volumes:
      - name: postgres-data
        # Название pvc, который создали ранее для хранения данных
        persistentVolumeClaim: 
          claimName: postgres-pvc
