postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
  - name: "5432-tcp"
    port: 5432
    protocol: TCP
  type: ClusterIP
