ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: short-app-ingress
  annotations: 
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: short-app.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: short-app-clusterip
            port: 
              name: "80-tcp"
              #number: 80 - можно указать напрямую порт 80, а можно указать имя порта, который задается в service
